@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,7 +26,7 @@
  * @test
  * @bug 8012453 8016046
  * @requires (os.family == "windows")
- * @run testng/othervm ExecCommand
+ * @run testng/othervm/policy=security.policy -Djava.security.manager=allow ExecCommand
  * @summary workaround for legacy applications with Runtime.getRuntime().exec(String command)
  */
 
@@ -38,7 +38,9 @@ import java.io.IOException;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.security.AccessControlException;
 import java.security.Permission;
+import java.security.SecurityPermission;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Properties;
@@ -50,10 +52,52 @@ import org.testng.annotations.Test;
 
 
 @SuppressWarnings("removal")
-public class ExecCommand {
+public class ExecCommandSM {
 
     private static final String JDK_LANG_PROCESS_ALLOW_AMBIGUOUS_COMMANDS =
             "jdk.lang.Process.allowAmbiguousCommands";
+
+    static class SecurityMan extends SecurityManager {
+        public static String unquote(String str)
+        {
+            int length = (str == null)
+                ? 0
+                : str.length();
+
+            if (length > 1
+                && str.charAt(0) == '\"'
+                && str.charAt(length - 1) == '\"')
+            {
+               return str.substring(1, length - 1);
+            }
+            return str;
+        }
+
+        @Override public void checkExec(String cmd) {
+            String ncmd = (new File(unquote(cmd))).getPath();
+            if ( ncmd.equals(".\\Program")
+              || ncmd.equals("\".\\Program")
+              || ncmd.equals(".\\Program Files\\do.cmd")
+              || ncmd.equals(".\\Program.cmd")
+              || ncmd.equals("cmd"))
+            {
+                return;
+            }
+            super.checkExec(cmd);
+        }
+
+        public void checkPermission(Permission perm) {
+            if (perm instanceof RuntimePermission ||
+                    perm instanceof java.lang.reflect.ReflectPermission)
+                return;
+            super.checkPermission(perm);
+        };
+        @Override public void checkRead(String file) {}       // TestNG reads files
+        @Override public void checkWrite(String file) {}      // TestNG writes files
+        @Override public void checkDelete(String file) {}
+        @Override public void checkPropertiesAccess() {}
+        @Override public void checkPropertyAccess(String name) {}  // TestNG reads properties
+    }
 
     private static final List<String> doCmdCopy = List.of(
         ".\\Program.cmd",
@@ -63,7 +107,7 @@ public class ExecCommand {
     @BeforeClass
     void setup() throws Exception {
 
-        // Create files to be executed
+        // Create files to be execute
         try {
             new File(".\\Program Files").mkdirs();
             for (String cmdFile : doCmdCopy) {
@@ -81,10 +125,8 @@ public class ExecCommand {
      * Sequence of tests and test results in the TEST_RTE_ARGS DataProvider below.
      * The ordinals are used as indices in the lists of expected results.
      */
-    private enum AmbiguousMode {
-        UNSET,      // 0) default allowAmbiguousCommands; equivalent to true
-        EMPTY,      // 1) allowAmbiguousCommand is empty; equivalent to true
-        FALSE,      // 2) allowAmbiguousCommands = false
+    private enum Mode {
+        EMPTY_SM,    // 3) SM and default allowAmbiguousCommands is empty; equivalent to false
     };
 
     /**
@@ -99,80 +141,59 @@ public class ExecCommand {
                         "dirOut.txt",
                         Arrays.asList(null,
                                 null,
+                                FileNotFoundException.class,
                                 FileNotFoundException.class)
                 },
                 {"cmd /C dir > \".\\Program Files\\dirOut.txt\"",
                         "./Program Files/dirOut.txt",
                         Arrays.asList(null,
                                 null,
+                                FileNotFoundException.class,
                                 FileNotFoundException.class)
                 },
                 {".\\Program Files\\do.cmd",
                         null,
                         Arrays.asList(null,
                                 null,
+                                IOException.class,
                                 IOException.class)
                 },
                 {"\".\\Program Files\\doNot.cmd\" arg",
                         null,
-                        Arrays.asList(null, null, null)
+                        Arrays.asList(null,
+                                null,
+                                null,
+                                AccessControlException.class)
                 },
                 {"\".\\Program Files\\do.cmd\" arg",
                         null,
-                        Arrays.asList(null, null, null)
+                        // AccessControlException
+                        Arrays.asList(null, null, null, null)
                 },
                 {"\".\\Program.cmd\" arg",
                         null,
-                        Arrays.asList(null, null, null)
+                        Arrays.asList(null, null, null, null)
                 },
                 {".\\Program.cmd arg",
                         null,
-                        Arrays.asList(null, null, null)
+                        Arrays.asList(null, null, null, null)
                 },
         };
     }
 
     /**
-     * Test each command with no SM and default allowAmbiguousCommands.
+     * Test each command with SecurityManager and default allowAmbiguousCommands is empty.
      * @param command a command
      * @param perModeExpected an expected Exception class or null
      */
     @Test(dataProvider = "TEST_RTE_ARGS")
-    void testCommandAmbiguousUnset(String command, String testFile, List<Class<Exception>> perModeExpected) {
-        // the JDK_LANG_PROCESS_ALLOW_AMBIGUOUS_COMMANDS is undefined
-        // "true" by default with the legacy verification procedure
-        Properties props = System.getProperties();
-        props.remove(JDK_LANG_PROCESS_ALLOW_AMBIGUOUS_COMMANDS);
-
-        testCommandMode(command, "Ambiguous Unset", testFile,
-                perModeExpected.get(AmbiguousMode.UNSET.ordinal()));
-    }
-
-    /**
-     * Test each command with no SM and allowAmbiguousCommand is empty.
-     * @param command a command
-     * @param perModeExpected an expected Exception class or null
-     */
-    @Test(dataProvider = "TEST_RTE_ARGS")
-    void testCommandAmbiguousEmpty(String command, String testFile, List<Class<Exception>> perModeExpected) {
+    void testCommandWithSM(String command, String testFile, List<Class<Exception>> perModeExpected) {
         Properties props = System.getProperties();
         props.setProperty(JDK_LANG_PROCESS_ALLOW_AMBIGUOUS_COMMANDS, "");
-        testCommandMode(command, "Ambiguous Empty", testFile,
-                perModeExpected.get(AmbiguousMode.EMPTY.ordinal()));
-    }
+        System.setSecurityManager(new SecurityMan());
 
-    /**
-     * Test each command with no SM and allowAmbiguousCommands = false.
-     * @param command a command
-     * @param perModeExpected an expected Exception class or null
-     */
-    @Test(dataProvider = "TEST_RTE_ARGS")
-    void testCommandAmbiguousFalse(String command, String testFile, List<Class<Exception>> perModeExpected) {
-        Properties props = System.getProperties();
-        props.setProperty(JDK_LANG_PROCESS_ALLOW_AMBIGUOUS_COMMANDS, "false");
-
-        testCommandMode(command, "Ambiguous false", testFile,
-                perModeExpected.get(AmbiguousMode.FALSE.ordinal()));
+        testCommandMode(command, "SecurityManager and Ambiguous Empty", testFile,
+                perModeExpected.get(Mode.EMPTY_SM.ordinal()));
     }
 
     private void testCommandMode(String command, String kind,
@@ -198,7 +219,7 @@ public class ExecCommand {
                 Assert.fail("Unexpected exception! Step " + kind + ":"
                         + "\nArgument: " + command
                         + "\nExpected: " + perModeExpected
-                        + "\n  Output: " + ex, ex);
+                        + "\n  Output: " + ex.getMessage(), ex);
             }
         }
     }
